force-app/main/default/objects/Hotel_Alert__c/Hotel_Alert__c.object-meta.xml
<CustomObject>
    <label>Hotel Alert</label>
    <nameField>
        <label>Alert name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels Alert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>