force-app/main/default/objects/Hotel_Alert__c/fields/Alert_description__c.field-meta.xml
<CustomField>
    <fullName>Alert_description__c</fullName>
    <label>Alert description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>