force-app/main/default/objects/Hotel_Alert__c/fields/End_publication_date__c.field-meta.xml
<CustomField>
    <fullName>End_publication_date__c</fullName>
    <label>End publication date</label>
    <type>Date</type>
</CustomField>