force-app/main/default/objects/Hotel_Alert__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipName>Hotels_Options</relationshipName>
    <type>Lookup</type>
</CustomField>