force-app/main/default/objects/Hotel_Alert__c/fields/Start_publication_date__c.field-meta.xml
<CustomField>
    <fullName>Start_publication_date__c</fullName>
    <label>Start publication date</label>
    <type>Date</type>
</CustomField>