force-app/main/default/objects/Hotel_Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alert_description__c</columns>
    <columns>Start_publication_date__c</columns>
    <columns>End_publication_date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>